--- a/UI/self-assessment.html
+++ b/UI/self-assessment.html
@@ -25,42 +25,25 @@
             </div>
           </nav>
 
-          <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-              <h4 class="display-6 text-center">Don’t stop when you’re tired. Stop when you’re done.</h4>
-             </div>
-          </div>
-
-          <div class="container">
+          <h1 class="text-center"> Self-Assesment Test</h1>
+          <div class="container box">
               <div class="row">
-                <div class="col-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="assets/inkblot.jpg" class="card-img-top" alt="Inkblot test">
-                        <div class="card-body">
-                          <h6 class="card-text text-center">Inkblot Test</h6>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="assets/self-aT.jpg" class="card-img-top" alt="Self-assessment Test">
-                        <div class="card-body">
-                          <h6 class="card-text text-center"><a href="self-assessment.html">Self-Assessment Test</a></h6>
-                        </div>
-                      </div>
-                </div>
-                <div class="col-4">
-                    <div class="card" style="width: 18rem;">
-                        <img src="assets/chatbot.jpg" class="card-img-top" alt="chatbot">
-                        <div class="card-body">
-                          <h6 class="card-text">Help -> Chatbot</h6>
-                        </div>
-                      </div>
-                </div>
+                  <div class="col">
+                      <ol>
+                          <li>Do you feel like listening to some music?
+                              <ul>
+                                  <li><input type="radio" value="Yes" id="yes" name="choice">
+                                    <label for="yes">Yes</label>
+                                </li>
+                                  <li><input type="radio" value="No" id="no"name="choice">
+                                    <label id="no">No</label>
+                                </li>
+                              </ul>
+                          </li>
+                      </ol>
+                  </div>
               </div>
-
           </div>
-         
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
