--- a/UI/index.html
+++ b/UI/index.html
@@ -4,12 +4,12 @@
     Le Medicin
 </title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
+<link rel="stylesheet" href="css\styles.css " type="text/css">
     </head>
     <body>
         <!--navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Le Medicin</a>
+            <a class="navbar-brand" href="#">Le Médecine</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,7 +26,8 @@
           </nav>
 
           
-<div class="container">
+      <h1 class="text-center welcome">Welcome to Le Médecine!</h1>
+<div class="container box">
   <div class="row">
     <div class="col-6">
       <h1> Login as a Patient</h1>
