--- a/UI/self-assessment.html
+++ b/UI/self-assessment.html
@@ -12,11 +12,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                  <a class="nav-link" href="patient_home.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Shop</a>
+                  <a class="nav-link" href="doctor_info.html">Consult a Doctor</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Logout</a>
