--- a/UI/shop.html
+++ b/UI/shop.html
@@ -13,11 +13,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
+                  <li class="nav-item">
+                    <a class="nav-link" href="patient_home.html">Home</a>
+                  </li>
                   <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Shop</a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
                 
                 <li class="nav-item">
@@ -26,17 +29,17 @@
               </ul>
             </div>
           </nav>
-          <div class="search">
+          <div class="search box">
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
               </form>
           </div>
           <div class="container">
               <div class="row">
                   <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card mx-auto shop" style="width: 18rem;">
+                        <img src="assets/medicine.jpg" class="card-img-top" alt="medicine">
                         <div class="card-body">
                           <h5 class="card-title">XYZ SHOP</h5>
                           <p class="card-text">Get your medicines here</p>
