--- a/UI/doctor_home.html
+++ b/UI/doctor_home.html
@@ -13,6 +13,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
+                
                 <li class="nav-item active">
                   <a class="nav-link" href="doctor_HOME.html">Patient's Detail<span class="sr-only">(current)</span></a>
                 </li>
@@ -25,7 +26,8 @@
               </ul>
             </div>
           </nav>
-          <div class="container">
+          <h1 class="text-center">Your Patients</h1>
+          <div class="container box">
               <div class="row">
                   <div class="col-8">
                       <p>
