--- a/UI/doctor_info.html
+++ b/UI/doctor_info.html
@@ -13,11 +13,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="patient_home.html">Home</a>
+                </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Shop</a>
+                  <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Logout</a>
@@ -25,17 +28,18 @@
               </ul>
             </div>
           </nav>
-          <div class="container">
+          
+          <div class="container box">
               <div class="row">
                   <div class="col-8">
                       <p>
-                          Name: Dr P. Gandhi
+                          <strong>Name:</strong> Dr P. Gandhi
                       </p>
                       <p>
-                          Area of Speciality: Family Medicine
+                          <strong>Area of Speciality:</strong> Family Medicine
                       </p>
                       <p>
-                          Contact: +91-9999999999
+                          <strong>Contact:</strong> +91-9999999999
                       </p>
                   </div>
                   <div class="col-4">
