--- a/UI/patient_home.html
+++ b/UI/patient_home.html
@@ -13,10 +13,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="patient_home.html">Home  <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Shop</a>
+                  <a class="nav-link" href="doctor_info.html">Consult a Doctor</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Logout</a>
@@ -53,7 +56,7 @@
                     <div class="card" style="width: 18rem;">
                         <img src="assets/chatbot.jpg" class="card-img-top" alt="chatbot">
                         <div class="card-body">
-                          <h6 class="card-text">Help -> Chatbot</h6>
+                          <h6 class="card-text text-center">Help -> Chatbot</h6>
                         </div>
                       </div>
                 </div>
