basic front-end completed

--- a/UI/doctor_vc.html
+++ b/UI/doctor_vc.html
@@ -28,7 +28,7 @@
           <div class="container">
               <div class="row">
                   <div class="col-6">
-                      <iframe src="https://zipcall.io/join/" title="call" width="400" height="400">
+                      <iframe src="https://zipcall.io/join/" title="call" height="500" width="1100">
                       </iframe>
                   </div>
               </div>
@@ -48,7 +48,7 @@
                       <option value="3">3</option>
                       <option value="4">4</option>
                     </select>
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+                    <button class="btn btn-success my-2 my-sm-0" type="submit">Submit</button>
                   </form>
               </div>
             </div>
