--- a/UI/hospital.html
+++ b/UI/hospital.html
@@ -16,40 +16,51 @@
                 <li class="nav-item">
                   <a class="nav-link" href="patient_home.html">Home</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="doctor_info.html">Consult a Doctor <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="hospital.html">Near Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Logout</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="hospital.html">Near Me</a>
                   </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="index.html">Logout</a>
+                    </li>
               </ul>
             </div>
           </nav>
-          <h1 class="text-center">Available Doctors</h1>
-          <div class="container box">
+          <div class="container">
               <div class="row">
-                  <div class="col-8">
-                      <p>
-                          <strong>Name:</strong> Dr P. Gandhi
-                      </p>
-                      <p>
-                          <strong>Area of Speciality:</strong> Family Medicine
-                      </p>
-                      <p>
-                          <strong>Contact:</strong> +91-9999999999
-                      </p>
-                  </div>
-                  <div class="col-4">
-                    <button type="button" class="btn btn-success"><a href="video_chat.html">Video chat</a></button>
-                  </div>
-              </div>
-          </div>
+                  <div class="col-6">
+          <ul class="hosp">
+            <li><input type="radio" value="Hospital" id="Hospital" name="choice">
+              <label for="Hospital">Hospital</label>
+          </li>
+            <li><input type="radio" value="Pharmacy" id="Pharmacy"name="choice">
+              <label for="Pharmacy">Pharmacy</label>
+          </li>
+        </ul>
+                </div>
+                <div class="col-6">
+        <form class="form-inline my-2 my-lg-0 margin">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+        </div>
+        </div>
+        <div class="container box">
+            <div class="row">
+                <div class="col">
+                    <p>Name: </p>
+                    <p>Address: </p>
+                    <p>Timing Details: </p>
+                    <p>Website: </p>
+                </div>
+            </div>
+        </div>
           <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
