--- a/UI/index.html
+++ b/UI/index.html
@@ -16,10 +16,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Login <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Login <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Register</a>
+                  <a class="nav-link" href="register.html">Register</a>
                 </li>
               </ul>
             </div>
