--- a/UI/patient_home.html
+++ b/UI/patient_home.html
@@ -22,6 +22,9 @@
                   <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="hospital.html">Near Me</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Logout</a>
                   </li>
               </ul>
