--- a/UI/self-assessment.html
+++ b/UI/self-assessment.html
@@ -22,6 +22,9 @@
                   <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="hospital.html">Near Me</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Logout</a>
                   </li>
               </ul>
@@ -39,7 +42,7 @@
                                     <label for="yes">Yes</label>
                                 </li>
                                   <li><input type="radio" value="No" id="no"name="choice">
-                                    <label id="no">No</label>
+                                    <label for="no">No</label>
                                 </li>
                               </ul>
                           </li>
