--- a/UI/shop.html
+++ b/UI/shop.html
@@ -22,7 +22,9 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="shop.html">Pharmacy</a>
                 </li>
-                
+                <li class="nav-item">
+                  <a class="nav-link" href="hospital.html">Near Me</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Logout</a>
                   </li>
