--- a/UI/doctor_vc.html
+++ b/UI/doctor_vc.html
@@ -27,8 +27,8 @@
           </nav>
           <div class="container">
               <div class="row">
-                  <div class="col-6">
-                      <iframe src="https://zipcall.io/join/" title="call" height="500" width="1100">
+                  <div class="col">
+                      <iframe src="https://zipcall.io/join/" title="call" height="500" width="100%">
                       </iframe>
                   </div>
               </div>
