--- a/UI/index.html
+++ b/UI/index.html
@@ -29,7 +29,7 @@
       <h1 class="text-center welcome">Welcome to Le Médecine!</h1>
 <div class="container box">
   <div class="row">
-    <div class="col-6">
+    <div class="col-5">
       <h1> Login as a Patient</h1>
       <form>
         <div class="form-group">
@@ -48,7 +48,10 @@
         <button type="submit" class="btn btn-primary"><a href="patient_home.html">Submit</a></button>
       </form>
     </div>
-    <div class="col-6">
+    <div class="col-2">
+      <h1 class="text-center" style="margin-top:85%">-Or-</h1>
+    </div>
+    <div class="col-5">
       <h1> Login as a Doctor</h1>
       <form>
         <div class="form-group">
