--- a/UI/video_chat.html
+++ b/UI/video_chat.html
@@ -28,7 +28,7 @@
           <div class="container">
               <div class="row">
                   <div class="col">
-                      <iframe src="https://zipcall.io/join/" title="call" height="500" width="1100">
+                      <iframe src="https://zipcall.io/join/" title="call" height="500" width="100%">
 
                       </iframe>
                   </div>
