--- a/UI/shop.html
+++ b/UI/shop.html
@@ -33,14 +33,14 @@
           </nav>
           <div class="search box">
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="width:90%;">
                 <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
               </form>
           </div>
-          <div class="container">
+          <div class="container box">
               <div class="row">
-                  <div class="col">
-                    <div class="card mx-auto shop" style="width: 18rem;">
+                  <div class="col-9">
+                    <!--<div class="card mx-auto shop" style="width: 18rem;">
                         <img src="assets/medicine.jpg" class="card-img-top" alt="medicine">
                         <div class="card-body">
                           <h5 class="card-title">XYZ SHOP</h5>
@@ -48,7 +48,14 @@
                           <a href="payment_ack.html" class="btn btn-primary">Pick up</a>
                           <a href="payment_ack.html" class="btn btn-primary">Home Delivery</a>
                         </div>
-                      </div>
+                      </div>-->
+                      <img src="assets/medicine.jpg" class="float"alt="medicine" height="50" width="50">
+                      <h5>XYZ SHOP</h5>
+                      <p>Get your medicines here!</p>
+                    </div>
+                      <div class="col-3">
+                      <a href="payment_ack.html" class="btn btn-primary float-right">Pick up</a>
+                          <a href="payment_ack.html" class="btn btn-primary float-right">Home Delivery</a>
                   </div>
               </div>
           </div>
