--- a/UI/doctor_vc.html
+++ b/UI/doctor_vc.html
@@ -39,6 +39,10 @@
               <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
               <div class="search">
                 <form class="form-inline my-2 my-lg-0">
+                  <label>Brief about Illness</label>
+                  <textarea id="illness-details" name="details" rows="4" cols="50">
+
+                  </textarea>
                     <input class="form-control mr-sm-2" type="text" placeholder="Medicine" aria-label="Medicine">
                     <label for="medicine"></label>
 
